# asteroids

./: CMakeLists.txt  README.md
src/: aster_game.cpp  aster_game.hpp  aster_main.cpp  aster_math.cpp  aster_math.hpp  aster_score.cpp  aster_score.hpp  aster_text.cpp  aster_text.hpp
src/actor/: aster_actor_eternal_actor.cpp  aster_actor_eternal_actor.hpp  aster_actor_ship.cpp  aster_actor_ship.hpp  aster_actor_temporary_actor.cpp  aster_actor_temporary_actor.hpp
src/actor/abstract/: aster_actor_abstract_actor.cpp  aster_actor_abstract_actor.hpp
src/manager/: aster_manager_font_manager.cpp  aster_manager_font_manager.hpp  aster_manager_music_manager.cpp  aster_manager_music_manager.hpp  aster_manager_sound_buffer_manager.cpp  aster_manager_sound_buffer_manager.hpp  aster_manager_texture_manager.cpp  aster_manager_texture_manager.hpp
src/manager/abstract/: aster_manager_abstract_manager.hpp
